# Automation-Tool

./: .envrc  .gitignore  Cargo.toml  devbox.json  flake.nix  release.toml  test_validate.rs  third-party-licenses.html
.github/workflows/: build-windows.yml  ci.yml
budget_scanner/: Cargo.toml  budget_scanner.cdx.json
budget_scanner/assets/: .~lock.Kosten-_und_Finanzierungsplan_V2.xlsx#  scan_fehler.csv
budget_scanner/src/: lib.rs  main.rs
fb_generator/: Cargo.toml  README.md  fb_generator.cdx.json
fb_generator/benches/: report_generation.rs
fb_generator/examples/: profile.rs  run_all_and_copy.rs  test_all_fields.rs  test_dates.rs  test_mixed_categories.rs  test_multilang.rs  test_multilang_grouped.rs  test_page_breaks.rs  test_parallel_protection.rs  test_sheet_protection.rs  test_workbook_protection.rs  test_wrong_cache.rs
fb_generator/src/: config.rs  error.rs  lib.rs  workbook_protection.rs
fb_generator/src/lang/: data.rs
fb_generator/src/report/: options.rs
fb_generator/src/report/api/: keys.rs  types.rs
fb_generator/src/report/calc/: template.rs
fb_generator/tests/: serde_integration.rs
folder_generator/: Cargo.toml
folder_generator/src/: lib.rs
gui/: Cargo.toml  gui.cdx.json
gui/src/: main.rs  updater.rs
gui/ui/: budget_page.slint  budget_to_fb.slint  components.slint  fb_page.slint  folder_page.slint  home_page.slint  main.slint  state.slint
