[package]
name = "budget_scanner"

# Geerbt vom Workspace
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
calamine = "0.34.0"
comfy-table = "7"
fb_generator = { workspace = true }
rayon = { workspace = true }
regex = "1"
walkdir = "2"
thiserror = { workspace = true }